--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -1,19 +1,25 @@
-<div class="sub-footer">
+<div class="sub-footer pt-1 pb-1">
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <div class="sub-footer-inner">
-          <ul>
-            {{ if .Site.Data.contact.phone }}<li><strong>Phone: </strong>{{ .Site.Data.contact.phone }}</li> {{ end }}
-            {{ if .Site.Data.contact.email }}<li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
-                {{ .Site.Data.contact.email }}</a></li>{{ end }}
-            {{ if .Site.Data.contact.address }}<li><strong>Address: </strong>{{ .Site.Data.contact.businessName }}, {{ .Site.Data.contact.address }}</li> {{ end }}
-          </ul>
-          <ul>
-            {{ if .Site.Data.contact.url }}<li class="zerostatic"><a href="https://{{ .Site.Data.contact.url }}">{{ .Site.Data.contact.url }}</a></li> {{ end }}
-          </ul>
-        </div>
+      <div class="col-12 col-xl-6 col-lg-6 col-md-6 pt-1 pb-1">
+        <p class="mt-0 mb-0 text-center text-xl-left text-lg-left text-md-left">© 2020 All Rights Reserved <strong>SeamlessAccess</strong></p>
+      </div>
+      <div class="col-12 col-xl-6 col-lg-6 col-md-6 pt-1 pb-1">
+        <p class="mt-0 mb-0 text-center text-xl-right text-lg-right text-md-right">
+				<span>
+					<a class="text-white" href="/contact"><strong>CONTACT</strong></a>
+				</span>
+          <span class="ml-2"><a href="{{ .Site.Data.social.twitter }}" target="_blank"><i class="fab fa-twitter-square text-white"></i></a></span>
+          <span class="ml-2"><a href="{{ .Site.Data.social.youtube }}" target="_blank"><i class="fab fa-youtube-square text-white"></i></a></span>
+        </p>
       </div>
     </div>
   </div>
-</div>
+
+  <style>
+    .sub-footer a, .sub-footer p {
+      font-size: 14px;
+      font-weight: 300;
+      color: white;
+    }
+  </style>
