Fixed flex layout in summary links.

--- a/layouts/services/summary.html
+++ b/layouts/services/summary.html
@@ -1,4 +1,4 @@
-<div class="service service-summary">
+<div class="service">
   {{ if .Params.icon }}
   <div class="service-image">
     <a href="{{ .Permalink }}"><img src="{{ .Site.BaseURL }}{{ .Params.icon }}"/></a>
