--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -23,9 +23,11 @@
 
 <div class="container pb-2 pt-2 pb-md-4 pt-md-4">
   <div class="row">
-    {{ range .Pages.ByWeight }}
-    <div class="col-12 col-md-6 col-lg-4 col-xl-2 mb-2">{{ .Render "summary" }}</div>
-    {{ end }}
+    <div class="col d-flex justify-content-center">
+      {{ range .Pages.ByWeight }}
+      <div class="mb-2">{{ .Render "summary" }}</div>
+      {{ end }}
+    </div>
   </div>
 </div>
 
