UX lead vacancy

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -33,6 +33,7 @@
               <li><a href="https://seamlessaccess.org/about/governance/" class="link">Governance and Funding</a></li>
               <li><a href="https://seamlessaccess.org/about/community/" class="link">Community</a></li>
               <li><a href="https://seamlessaccess.org/about/trust/" class="link">Privacy and Trust</a></li>
+              <li><a href="https://seamlessaccess.org/about/vacancies/" class="link">Vacancies</a></li>
               <li><a href="https://seamlessaccess.org/posts/" class="link">News</a></li>
             </ul>
             <br>
