--- a/layouts/partials/hero-image-setheight.html
+++ b/layouts/partials/hero-image-setheight.html
@@ -3,7 +3,8 @@
     <div class="hero-text">
       <h1>{{ if .section }}<a href="../" style="color: inherit;"><span class="hero-section">{{ .section }}</span></a> > {{ end }}{{ .heading }}</h1>
       <p><strong>{{ .subheadinglead }}</strong>{{ .subheading }}</p>
-      <!-- For displaying the image in the hero 
+      <a class="btn btn-primary" href="https://demo.seamlessaccess.org">Demo</a>
+      <!-- For displaying the image in the hero
       <div class="hero-image icon-image">
         <img src="{{ .Site.BaseURL }}{{ .icon }}"/>
       </div>
@@ -11,4 +12,3 @@
     </div>
   </div>
 </div>
-  
