--- a/themes/hugo-hero-theme/assets/scss/style.scss
+++ b/themes/hugo-hero-theme/assets/scss/style.scss
@@ -84,6 +84,37 @@ $fa-font-path: "../../fonts/fontawesome5";
 @import 'pages/posts/page-posts-single';
 @import 'pages/posts/post-summary';
 
+// CUSTOM CSS
+
+.sa-text {
+  color: #fff;
+  font-size: 1.3rem;
+  line-height: 1.2;
+  font-weight: 300;
+  flex: 0;
+  margin: auto 0;
+}
+
+.sa-button {
+  background: #B3337C;
+  border: 1px solid #B57A7A;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
+
+.sa-button:hover {
+  text-decoration: underline;
+  background: #B3337C;
+  border: 1px solid #FFF;
+}
+
+.sa-button:focus {
+  text-decoration: underline;
+  background: #B3337C;
+  border: 1px solid #FFF;
+}
+
+
 // Display breakpoints for DEV
 // body:after {
 //   color: #000000;
