Add image on left (seperate from BG)
TODO: Transform hero-image-setheight.html to propper Hugo template

--- a/themes/hugo-hero-theme/assets/scss/style.scss
+++ b/themes/hugo-hero-theme/assets/scss/style.scss
@@ -114,6 +114,14 @@ $fa-font-path: "../../fonts/fontawesome5";
   border: 1px solid #FFF;
 }
 
+.sa-hero-index {
+  margin-left: 10%;
+}
+
+.sa-hero-index img {
+  width: 80%;
+}
+
 
 // Display breakpoints for DEV
 // body:after {
