--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,7 +46,7 @@
   <div id="home" class="container pt-2 pb-1 pt-md-2 pb-md-1">
     <div class="row justify-content-center">
       {{ range .Site.Data.features }}
-      <div class="col-12 col-md-6 col-lg-3 mb-2">
+      <div class="col-12 col-md-6 col-lg-3 mb-2 my-auto">
         <div class="feature">
           {{ if .image }}<div class="feature-image"><img alt="{{ .title }} logo" src="{{ $.Site.BaseURL }}{{ .image }}" /></div> {{ end }}
           <h2 class="feature-title">{{ .title }}</h2>
