--- a/layouts/partials/hero-image-setheight-homepage.html
+++ b/layouts/partials/hero-image-setheight-homepage.html
@@ -5,7 +5,11 @@
         <div class="sa-text">
           <h1>{{ if .section }}<a href="../" style="color: inherit;"><span class="hero-section">{{ .section }}</span></a> > {{ end }}{{ .heading }}</h1>
           <p><strong>{{ .subheadinglead }}</strong>{{ .subheading }}</p>
+          <a class="btn btn-primary sa-button" href="https://demo.seamlessaccess.org">Demo</a>
         </div>
+        </div>
+        <div class="col my-auto sa-hero-index">
+          <img src="features/sa-hero-example.png" alt="Example of an Article page showing the Seamless Access button">
         </div>
         <!-- For displaying the image in the hero
         <div class="hero-image icon-image">
